[package]
name = "tetris"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
gemini-engine = "0.14.0"
console-input = "0.1.2"
rand = "0.8.5"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
